--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <div class="image-container rotate-in">
-            <img src="../image/photo_2024-08-02_18-26-40.jpg" alt="Description de l'image">
+            <img src="image/photo_2024-08-02_18-26-40.jpg" alt="Description de l'image">
             <div class="home-info">
                 <h2>
                     <span style="--i:3;" data-text="Alioune Badara Fall">Alioune Badara Fall</span>
